{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 282,
  "lineage": "9ddb369f-cad5-1b6b-af2c-866f4afcccef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_ec2-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:499679880366:instance/i-0c939e49058ad6c95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_IAM_instance_profile",
            "id": "i-0c939e49058ad6c95",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_keyPair_web_Ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8044cc22d4f8795",
            "private_dns": "ip-10-20-0-91.ec2.internal",
            "private_ip": "10.20.0.91",
            "public_ip": "34.224.37.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03cfdfb0d04e4d1bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe93ef8ac4caf6a9",
            "tags": {
              "Environment": "DEV",
              "Name": "My_EC2-WEB-DEV-us-east-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04495ace10cb71d06"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_IAM_instance_profile",
            "aws_key_pair.my_keyPair_web_Ec2",
            "aws_security_group.my_security_group_WEB",
            "aws_subnet.my_public_subnets",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:499679880366:instance/i-0d41e09247103daf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_IAM_instance_profile",
            "id": "i-0d41e09247103daf0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_keyPair_web_Ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05975969abcdc96d4",
            "private_dns": "ip-10-20-1-107.ec2.internal",
            "private_ip": "10.20.1.107",
            "public_ip": "3.93.44.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-027828b785cc5f0a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04de78b30cf3607b0",
            "tags": {
              "Environment": "DEV",
              "Name": "My_EC2-WEB-DEV-us-east-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04495ace10cb71d06"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_IAM_instance_profile",
            "aws_key_pair.my_keyPair_web_Ec2",
            "aws_security_group.my_security_group_WEB",
            "aws_subnet.my_public_subnets",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a9d4a05375b2763",
            "arn": "arn:aws:ec2:us-east-1:499679880366:instance/i-017c7c9887bab7190",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017c7c9887bab7190",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d69b84645ba053fd",
            "private_dns": "ip-10-20-0-181.ec2.internal",
            "private_ip": "10.20.0.181",
            "public_ip": "54.175.211.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0a730844c945a3ee5",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0fe93ef8ac4caf6a9",
            "tags": {
              "Environment": "DEV",
              "Name": "My_EC2-NAT-DEV-us-east-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077ccd86b0b159366"
            ]
          },
          "dependencies": [
            "aws_security_group.my_security_group_NAT",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:internet-gateway/igw-03bb2a7a8d13edf65",
            "id": "igw-03bb2a7a8d13edf65",
            "owner_id": "499679880366",
            "tags": {
              "Name": "My_igw-DEV"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_routeTable_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d0728f22d2064830",
            "owner_id": "499679880366",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-017c7c9887bab7190",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0d69b84645ba053fd",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_Private_RouteTable-DEV"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.my_nat",
            "aws_security_group.my_security_group_NAT",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_routeTable_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe0b660f88eeb66f",
            "owner_id": "499679880366",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bb2a7a8d13edf65",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My_public_RouteTable-DEV"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_training_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_association_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c78c8cdf378c574e",
            "route_table_id": "rtb-0d0728f22d2064830",
            "subnet_id": "subnet-0436f7111ba9633b1"
          },
          "dependencies": [
            "aws_instance.my_nat",
            "aws_route_table.my_routeTable_private",
            "aws_security_group.my_security_group_NAT",
            "aws_subnet.my_private_subnets",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d1ad7b59e92b1c3",
            "route_table_id": "rtb-0d0728f22d2064830",
            "subnet_id": "subnet-0ca45ba5ea3c097dc"
          },
          "dependencies": [
            "aws_instance.my_nat",
            "aws_route_table.my_routeTable_private",
            "aws_security_group.my_security_group_NAT",
            "aws_subnet.my_private_subnets",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_rt_association_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00626f60fd43810a5",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-0fe93ef8ac4caf6a9"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e361871729b11aed",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-04de78b30cf3607b0"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d9912c939efd96",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-0a9f49e9e2c35fc18"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bc3d79bd0e9bdd8",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-0c0c39fae42320e35"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fb6ddbf18c20ccc",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-0d65669148050c635"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b38274b5990c604c",
            "route_table_id": "rtb-0fe0b660f88eeb66f",
            "subnet_id": "subnet-0b62164b1851599bb"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.my_routeTable_public",
            "aws_subnet.my_public_subnets",
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:security-group/sg-077ccd86b0b159366",
            "description": "Allow traffic for Private Subnets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077ccd86b0b159366",
            "ingress": [],
            "name": "My_SecurityGroup-NAT-DEV",
            "name_prefix": "",
            "owner_id": "499679880366",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_training_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group_WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:security-group/sg-04495ace10cb71d06",
            "description": "Allow traffic for WEB App",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04495ace10cb71d06",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "My_SecurityGroup-WEB-DEV",
            "name_prefix": "",
            "owner_id": "499679880366",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_training_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0436f7111ba9633b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.6.0/24",
            "id": "subnet-0436f7111ba9633b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_Private_subnet-DEV-us-east-1a",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_Private_subnet-DEV-us-east-1a",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0ca45ba5ea3c097dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.7.0/24",
            "id": "subnet-0ca45ba5ea3c097dc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_Private_subnet-DEV-us-east-1b",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_Private_subnet-DEV-us-east-1b",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0fe93ef8ac4caf6a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-0fe93ef8ac4caf6a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1a",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1a",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-04de78b30cf3607b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-04de78b30cf3607b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1b",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1b",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0a9f49e9e2c35fc18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-0a9f49e9e2c35fc18",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1c",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1c",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0c0c39fae42320e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-0c0c39fae42320e35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1d",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1d",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0d65669148050c635",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-0d65669148050c635",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1e",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1e",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:subnet/subnet-0b62164b1851599bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-0b62164b1851599bb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1f",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_public_subnet-DEV-us-east-1f",
              "chargeCode": "000111222333"
            },
            "vpc_id": "vpc-0cd96db14b3c21a80"
          },
          "dependencies": [
            "aws_vpc.my_training_VPC",
            "data.aws_availability_zones.current_azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_training_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:499679880366:vpc/vpc-0cd96db14b3c21a80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0af7195bd2f3a99c5",
            "default_route_table_id": "rtb-0f8cacd90b0a10f7a",
            "default_security_group_id": "sg-0a31e60a90e278dc5",
            "dhcp_options_id": "dopt-4b03e431",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cd96db14b3c21a80",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f8cacd90b0a10f7a",
            "owner_id": "499679880366",
            "tags": {
              "Environment": "DEV",
              "Name": "My_VPC-DEV",
              "chargeCode": "000111222333"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "My_VPC-DEV",
              "chargeCode": "000111222333"
            }
          }
        }
      ]
    }
  ]
}